--- a/responsive.css
+++ b/responsive.css
@@ -44,7 +44,7 @@
   
   /* Tambahkan CSS untuk menu-icon */
   .menu-icon {
-    display: block;
+    display: block !important;
   }
   
   .top-wrapper h1 {
